--- a/PointOfSale/OrderSummaryControl.xaml
+++ b/PointOfSale/OrderSummaryControl.xaml
@@ -5,37 +5,40 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:PointOfSale"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+             d:DesignHeight="350" d:DesignWidth="250">
     <UserControl.Resources>
         <Style TargetType="TextBlock">
             <Setter Property="FontSize" Value="20"/>
         </Style>
     </UserControl.Resources>
     <Grid>
-        <StackPanel>
-            <StackPanel Orientation="Horizontal">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="30"/>
+            <RowDefinition Height="290"/>
+            <RowDefinition Height="30"/>
+        </Grid.RowDefinitions>
+        <StackPanel Grid.Row="0" Orientation="Horizontal">
                 <TextBlock Text="Order "/>
                 <TextBlock Text="{Binding Path=OrderNumber}"/>
-            </StackPanel>
-            <ListView ItemsSource="{Binding Path=Items}">
-                <ListView.ItemTemplate>
-                    <DataTemplate>
-                        <Grid>
-                            <Grid.RowDefinitions>
-                                <RowDefinition/>
-                                <RowDefinition/>
-                            </Grid.RowDefinitions>
-                            <TextBlock Grid.Row="0" Text="{Binding}"/>
-                            <TextBlock Grid.Row="0" Margin="175,0" Text="{Binding Path=Price,StringFormat=c}"/>
-                            <ListBox Grid.Row="1" ItemsSource="{Binding Path=SpecialInstructions}"/>
-                        </Grid>
-                    </DataTemplate>
-                </ListView.ItemTemplate>
-            </ListView>
-            <StackPanel Orientation="Horizontal">
-                <TextBlock Text="Subtotal"/>
-                <TextBlock Margin="105,0" Text="{Binding Path=Subtotal,StringFormat=c}"/>
-            </StackPanel>
+        </StackPanel>
+        <ListView Grid.Row="1" Height="290" ItemsSource="{Binding Path=Items}">
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <Grid>
+                        <Grid.RowDefinitions>
+                            <RowDefinition/>
+                            <RowDefinition/>
+                        </Grid.RowDefinitions>
+                        <TextBlock Grid.Row="0" Text="{Binding}"/>
+                        <TextBlock Grid.Row="0" Margin="175,0,0,0" Text="{Binding Path=Price,StringFormat=c}"/>
+                        <ListBox Grid.Row="1" ItemsSource="{Binding Path=SpecialInstructions}"/>
+                    </Grid>
+                </DataTemplate>
+            </ListView.ItemTemplate>
+        </ListView>
+        <StackPanel Grid.Row="2" Orientation="Horizontal">
+            <TextBlock Text="Subtotal"/>
+            <TextBlock Margin="105,0,0,0" Text="{Binding Path=Subtotal,StringFormat=c}"/>
         </StackPanel>
     </Grid>
 </UserControl>
