--- a/PointOfSale/OrderControl.xaml
+++ b/PointOfSale/OrderControl.xaml
@@ -26,9 +26,9 @@
             <local:MenuItemSelectionControl/>
         </Border>
         <StackPanel Orientation="Horizontal" Grid.Column="0" Grid.Row="0">
-            <Button Name="ItemSelectionButton">Item Selection</Button>
-            <Button Name="CancelOrderButton">Cancel Order</Button>
-            <Button Name="CompleteOrderButton">Complete Order</Button>
+            <Button Name="ItemSelectionButton" Click="OnItemSelectionButtonClicked">Item Selection</Button>
+            <Button Name="CancelOrderButton" Click="OnCancelOrderButtonClicked">Cancel Order</Button>
+            <Button Name="CompleteOrderButton" Click="OnCompleteOrderButtonClicked">Complete Order</Button>
         </StackPanel>
         <local:OrderSummaryControl Grid.Column="1" Grid.Row="1"/>
     </Grid>
