--- a/PointOfSale/CustomizeAngryChicken.xaml
+++ b/PointOfSale/CustomizeAngryChicken.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="PointOfSale.CustomizeCowpokeChili"
+﻿<UserControl x:Class="PointOfSale.CustomizeAngryChicken"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -10,15 +10,13 @@
         <Grid.ColumnDefinitions>
             <ColumnDefinition/>
             <ColumnDefinition/>
-            <ColumnDefinition/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="50"/>
             <RowDefinition/>
         </Grid.RowDefinitions>
-        <TextBlock Grid.Row="0" Grid.ColumnSpan="3"  FontSize="30" Text="Cowpoke Chili"/>
-        <CheckBox Grid.Row="1" Grid.Column="0" FontSize="20" IsChecked="{Binding Path=Cheese}">Cheese</CheckBox>
-        <CheckBox Grid.Row="1" Grid.Column="1" FontSize="20" IsChecked="{Binding Path=GreenOnions}">Green Onions</CheckBox>
-        <CheckBox Grid.Row="1" Grid.Column="2"  FontSize="20" IsChecked="{Binding Path=SourCream}">Sour Cream</CheckBox>
+        <TextBlock Grid.Row="0" Grid.ColumnSpan="2" FontSize="30" Text="Angry Chicken"/>
+        <CheckBox Grid.Row="1" Grid.Column="0" FontSize="20" IsChecked="{Binding Path=Bread}" Content="Bread"/>
+        <CheckBox Grid.Row="1" Grid.Column="1" FontSize="20" IsChecked="{Binding Path=Pickle}" Content="Pickle"/>
     </Grid>
 </UserControl>
