--- a/PointOfSale/CustomizeTrailBurger.xaml
+++ b/PointOfSale/CustomizeTrailBurger.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="PointOfSale.CustomizeCowpokeChili"
+﻿<UserControl x:Class="PointOfSale.CustomizeTrailBurger"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -11,14 +11,18 @@
             <ColumnDefinition/>
             <ColumnDefinition/>
             <ColumnDefinition/>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="50"/>
             <RowDefinition/>
         </Grid.RowDefinitions>
-        <TextBlock Grid.Row="0" Grid.ColumnSpan="3"  FontSize="30" Text="Cowpoke Chili"/>
-        <CheckBox Grid.Row="1" Grid.Column="0" FontSize="20" IsChecked="{Binding Path=Cheese}">Cheese</CheckBox>
-        <CheckBox Grid.Row="1" Grid.Column="1" FontSize="20" IsChecked="{Binding Path=GreenOnions}">Green Onions</CheckBox>
-        <CheckBox Grid.Row="1" Grid.Column="2"  FontSize="20" IsChecked="{Binding Path=SourCream}">Sour Cream</CheckBox>
+        <TextBlock Grid.Row="0" Grid.ColumnSpan="5" FontSize="30"  Text="Trail Burger"/>
+        <CheckBox Grid.Row="1" Grid.Column="0" IsChecked="{Binding Path=Bun}" Content="Bun"/>
+        <CheckBox Grid.Row="1" Grid.Column="1" IsChecked="{Binding Path=Cheese}" Content="Cheese"/>
+        <CheckBox Grid.Row="1" Grid.Column="2" IsChecked="{Binding Path=Ketchup}" Content="Ketchup"/>
+        <CheckBox Grid.Row="1" Grid.Column="3" IsChecked="{Binding Path=Mustard}" Content="Mustard"/>
+        <CheckBox Grid.Row="1" Grid.Column="4" IsChecked="{Binding Path=Pickle}" Content="Pickle"/>
     </Grid>
 </UserControl>
