--- a/PointOfSale/OrderControl.xaml
+++ b/PointOfSale/OrderControl.xaml
@@ -5,12 +5,12 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:PointOfSale"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+             d:DesignHeight="550" d:DesignWidth="950">
     <UserControl.Resources>
         <Style TargetType="Button">
             <Setter Property="Height" Value="35px"/>
             <Setter Property="FontSize" Value="18"/>
-            <Setter Property="Margin" Value="10,0"/>
+            <Setter Property="Margin" Value="0,0,10,0"/>
         </Style>
     </UserControl.Resources>
     <Grid>
@@ -22,9 +22,11 @@
             <RowDefinition Height="50"/>
             <RowDefinition/>
         </Grid.RowDefinitions>
+        <!--The Container Border is used to swap the MenuItemSelectionControl with the Customization Screens-->
         <Border x:Name="Container" Grid.Column="0" Grid.Row="1">
             <local:MenuItemSelectionControl/>
         </Border>
+        <!--These three buttons control how the user interacts with the order summary and swapping between MenuItemSelection and Customization controls-->
         <StackPanel Orientation="Horizontal" Grid.Column="0" Grid.Row="0">
             <Button Name="ItemSelectionButton" Click="OnItemSelectionButtonClicked">Item Selection</Button>
             <Button Name="CancelOrderButton" Click="OnCancelOrderButtonClicked">Cancel Order</Button>
