--- a/PointOfSale/CustomizeSide.xaml
+++ b/PointOfSale/CustomizeSide.xaml
@@ -6,6 +6,11 @@
              xmlns:local="clr-namespace:PointOfSale"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
+    <UserControl.Resources>
+        <Style TargetType="RadioButton">
+            <Setter Property="FontSize" Value="25"/>
+        </Style>
+    </UserControl.Resources>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="50"/>
@@ -14,9 +19,10 @@
         <TextBlock Grid.Row="0" FontSize="30" Name="SideName"/>
         <!--User can select the size of the side by choosing one of the three radio buttons-->
         <StackPanel Grid.Row="1" HorizontalAlignment="Left">
-            <RadioButton Name="SmallRadioButton" Click="RadioButtonClick" Content="Small" Width="100"/>
-            <RadioButton Name="MediumRadioButton" Click="RadioButtonClick" Content="Medium" Width="100"/>
-            <RadioButton Name="LargeRadioButton" Click="RadioButtonClick" Content="Large" Width="100"/>
+            <TextBlock Text="Size" FontSize="28"/>
+            <RadioButton Name="SmallRadioButton" Click="RadioButtonClick" Content="Small"/>
+            <RadioButton Name="MediumRadioButton" Click="RadioButtonClick" Content="Medium"/>
+            <RadioButton Name="LargeRadioButton" Click="RadioButtonClick" Content="Large"/>
         </StackPanel>
     </Grid>
 </UserControl>
