--- a/PointOfSale/CustomizeTexasTripleBurger.xaml
+++ b/PointOfSale/CustomizeTexasTripleBurger.xaml
@@ -6,29 +6,36 @@
              xmlns:local="clr-namespace:PointOfSale"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
+    <UserControl.Resources>
+        <Style TargetType="CheckBox">
+            <Setter Property="FontSize" Value="25"/>
+        </Style>
+    </UserControl.Resources>
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition/>
-            <ColumnDefinition/>
-            <ColumnDefinition/>
-            <ColumnDefinition/>
+            <ColumnDefinition Width="120"/>
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="50"/>
-            <RowDefinition/>
+            <RowDefinition Height="45"/>
+            <RowDefinition Height="40"/>
             <RowDefinition/>
         </Grid.RowDefinitions>
-        <TextBlock Grid.Row="0" Grid.ColumnSpan="5" FontSize="30" Text="Texas Triple Burger"/>
-        <CheckBox Grid.Row="1" Grid.Column="0" IsChecked="{Binding Path=Bacon}" Content="Bacon"/>
-        <CheckBox Grid.Row="1" Grid.Column="1" IsChecked="{Binding Path=Bun}" Content="Bun"/>
-        <CheckBox Grid.Row="1" Grid.Column="2" IsChecked="{Binding Path=Cheese}" Content="Cheese"/>
-        <CheckBox Grid.Row="1" Grid.Column="3" IsChecked="{Binding Path=Egg}" Content="Egg"/>
-        <CheckBox Grid.Row="1" Grid.Column="4" IsChecked="{Binding Path=Ketchup}" Content="Ketchup"/>
-        <CheckBox Grid.Row="2" Grid.Column="0" IsChecked="{Binding Path=Lettuce}" Content="Lettuce"/>
-        <CheckBox Grid.Row="2" Grid.Column="1" IsChecked="{Binding Path=Mayo}" Content="Mayo"/>
-        <CheckBox Grid.Row="2" Grid.Column="2" IsChecked="{Binding Path=Mustard}" Content="Mustard"/>
-        <CheckBox Grid.Row="2" Grid.Column="3" IsChecked="{Binding Path=Pickle}" Content="Pickle"/>
-        <CheckBox Grid.Row="2" Grid.Column="4" IsChecked="{Binding Path=Tomato}" Content="Tomato"/>
+        <TextBlock Grid.Row="0" Grid.ColumnSpan="2" FontSize="30" Text="Texas Triple Burger"/>
+        <TextBlock Grid.Row="1" Grid.ColumnSpan="2" Text="Ingredients" FontSize="28"/>
+        <StackPanel Grid.Row="2" Grid.Column="0" HorizontalAlignment="Left">
+            <CheckBox IsChecked="{Binding Path=Bacon}" Content="Bacon"/>
+            <CheckBox IsChecked="{Binding Path=Bun}" Content="Bun"/>
+            <CheckBox IsChecked="{Binding Path=Cheese}" Content="Cheese"/>
+            <CheckBox IsChecked="{Binding Path=Egg}" Content="Egg"/>
+            <CheckBox IsChecked="{Binding Path=Ketchup}" Content="Ketchup"/>
+        </StackPanel>
+        <StackPanel Grid.Row="2" Grid.Column="1">
+            <CheckBox IsChecked="{Binding Path=Lettuce}" Content="Lettuce"/>
+            <CheckBox IsChecked="{Binding Path=Mayo}" Content="Mayo"/>
+            <CheckBox IsChecked="{Binding Path=Mustard}" Content="Mustard"/>
+            <CheckBox IsChecked="{Binding Path=Pickle}" Content="Pickle"/>
+            <CheckBox IsChecked="{Binding Path=Tomato}" Content="Tomato"/>
+        </StackPanel>
     </Grid>
 </UserControl>
