--- a/PointOfSale/OrderSummaryControl.xaml
+++ b/PointOfSale/OrderSummaryControl.xaml
@@ -21,19 +21,25 @@
                 <TextBlock Text="Order "/>
                 <TextBlock Text="{Binding Path=OrderNumber}"/>
         </StackPanel>
-        <!--ListView has two inner columns to seperate the item and the item's price-->
+        <!--ListView has two inner columns to seperate the item, the item's price, and its remove item button-->
         <!--There is also another ListView for each item in case the item has special instructions-->
-        <ListView Grid.Row="1" Height="290" ItemsSource="{Binding Path=Items}">
+        <ListView Grid.Row="1" Height="290" ItemsSource="{Binding Path=Items}" SelectionChanged="OnOrderItemClicked" >
             <ListView.ItemTemplate>
                 <DataTemplate>
                     <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="190"/>
+                            <ColumnDefinition Width="30"/>
+                            <ColumnDefinition/>
+                        </Grid.ColumnDefinitions>
                         <Grid.RowDefinitions>
                             <RowDefinition/>
                             <RowDefinition/>
                         </Grid.RowDefinitions>
-                        <TextBlock Grid.Row="0" Text="{Binding}"/>
-                        <TextBlock Grid.Row="0" Margin="200,0,0,0" Text="{Binding Path=Price,StringFormat=c}"/>
-                        <ListBox Grid.Row="1" ItemsSource="{Binding Path=SpecialInstructions}"/>
+                        <TextBlock Grid.Row="0" Grid.Column="0" Text="{Binding}" Name="OrderItem"/>
+                        <TextBlock Grid.Row="0" Grid.Column="1" Text="{Binding Path=Price,StringFormat=c}"/>
+                        <Button Grid.RowSpan="2" Grid.Column="2" Width="30" Background="Crimson" Content="X" HorizontalContentAlignment="Center" Click="OnRemoveButtonClicked"/>
+                        <ListView Grid.Row="1" Grid.ColumnSpan="2" ItemsSource="{Binding Path=SpecialInstructions}"/>
                     </Grid>
                 </DataTemplate>
             </ListView.ItemTemplate>
