--- a/PointOfSale/CustomizeDakotaDoubleBurger.xaml
+++ b/PointOfSale/CustomizeDakotaDoubleBurger.xaml
@@ -6,26 +6,27 @@
              xmlns:local="clr-namespace:PointOfSale"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
+    <UserControl.Resources>
+        <Style TargetType="CheckBox">
+            <Setter Property="FontSize" Value="25"/>
+        </Style>
+    </UserControl.Resources>
     <Grid>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition/>
-            <ColumnDefinition/>
-            <ColumnDefinition/>
-            <ColumnDefinition/>
-        </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="50"/>
             <RowDefinition/>
-            <RowDefinition/>
         </Grid.RowDefinitions>
-        <TextBlock Grid.Row="0" Grid.ColumnSpan="4" FontSize="30" Text="Dakota Double Burger"/>
-        <CheckBox Grid.Row="1" Grid.Column="0" FontSize="20" IsChecked="{Binding Path=Bun}" Content="Bun"/>
-        <CheckBox Grid.Row="1" Grid.Column="1" FontSize="20" IsChecked="{Binding Path=Cheese}" Content="Cheese"/>
-        <CheckBox Grid.Row="1" Grid.Column="2" FontSize="20" IsChecked="{Binding Path=Ketchup}" Content="Ketchup"/>
-        <CheckBox Grid.Row="1" Grid.Column="3" FontSize="20" IsChecked="{Binding Path=Lettuce}" Content="Lettuce"/>
-        <CheckBox Grid.Row="2" Grid.Column="0" FontSize="20" IsChecked="{Binding Path=Mayo}" Content="Mayo"/>
-        <CheckBox Grid.Row="2" Grid.Column="1" FontSize="20" IsChecked="{Binding Path=Mustard}" Content="Mustard"/>
-        <CheckBox Grid.Row="2" Grid.Column="2" FontSize="20" IsChecked="{Binding Path=Pickle}" Content="Pickle"/>
-        <CheckBox Grid.Row="2" Grid.Column="3" FontSize="20" IsChecked="{Binding Path=Tomato}" Content="Tomato"/>
+        <TextBlock Grid.Row="0" FontSize="30" Text="Dakota Double Burger"/>
+        <StackPanel Grid.Row="1" HorizontalAlignment="Left">
+            <TextBlock Text="Ingredients" FontSize="28"/>
+            <CheckBox IsChecked="{Binding Path=Bun}" Content="Bun"/>
+            <CheckBox IsChecked="{Binding Path=Cheese}" Content="Cheese"/>
+            <CheckBox IsChecked="{Binding Path=Ketchup}" Content="Ketchup"/>
+            <CheckBox IsChecked="{Binding Path=Lettuce}" Content="Lettuce"/>
+            <CheckBox IsChecked="{Binding Path=Mayo}" Content="Mayo"/>
+            <CheckBox IsChecked="{Binding Path=Mustard}" Content="Mustard"/>
+            <CheckBox IsChecked="{Binding Path=Pickle}" Content="Pickle"/>
+            <CheckBox IsChecked="{Binding Path=Tomato}" Content="Tomato"/>
+        </StackPanel>
     </Grid>
 </UserControl>
