--- a/PointOfSale/CustomizeJerkedSoda.xaml
+++ b/PointOfSale/CustomizeJerkedSoda.xaml
@@ -6,10 +6,18 @@
              xmlns:local="clr-namespace:PointOfSale"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
+    <UserControl.Resources>
+        <Style TargetType="RadioButton">
+            <Setter Property="FontSize" Value="25"/>
+        </Style>
+        <Style TargetType="CheckBox">
+            <Setter Property="FontSize" Value="25"/>
+        </Style>
+    </UserControl.Resources>
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition/>
-            <ColumnDefinition/>
+            <ColumnDefinition Width="160"/>
+            <ColumnDefinition Width="180"/>
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
@@ -17,20 +25,25 @@
             <RowDefinition/>
         </Grid.RowDefinitions>
         <TextBlock Grid.Row="0" Grid.ColumnSpan="3" FontSize="30" Text="Jerked Soda"/>
-        <!--User can select the size of the Jerked Soda by choosing one of the three radio buttons-->
         <StackPanel Grid.Row="1" Grid.Column="0" HorizontalAlignment="Left">
-            <RadioButton Name="SmallRadioButton" Click="SizeRadioButtonClick" Content="Small" Width="100"/>
-            <RadioButton Name="MediumRadioButton" Click="SizeRadioButtonClick" Content="Medium" Width="100"/>
-            <RadioButton Name="LargeRadioButton" Click="SizeRadioButtonClick" Content="Large" Width="100"/>
+            <TextBlock Text="Ingredients" FontSize="28"/>
+            <CheckBox Grid.Row="1" Grid.Column="0" IsChecked="{Binding Path=Ice}" Content="Ice"/>
         </StackPanel>
         <!--User can select the flavor of the Jerked Soda by choosing one of the five radio buttons-->
         <StackPanel Grid.Row="1" Grid.Column="1" HorizontalAlignment="Left">
-            <RadioButton Name="BirchBeerRadioButton" Click="SodaFlavorRadioButtonClick" Content="Birch Beer" Width="100"/>
-            <RadioButton Name="CreamSodaRadioButton" Click="SodaFlavorRadioButtonClick" Content="Cream Soda" Width="100"/>
-            <RadioButton Name="OrangeSodaRadioButton" Click="SodaFlavorRadioButtonClick" Content="Orange Soda" Width="100"/>
-            <RadioButton Name="RootBeerRadioButton" Click="SodaFlavorRadioButtonClick" Content="Root Beer" Width="100"/>
-            <RadioButton Name="SarsparillaRadioButton" Click="SodaFlavorRadioButtonClick" Content="Sarsparilla" Width="100"/>
+            <TextBlock Text="Soda Flavor" FontSize="28"/>
+            <RadioButton Name="BirchBeerRadioButton" Click="SodaFlavorRadioButtonClick" Content="Birch Beer"/>
+            <RadioButton Name="CreamSodaRadioButton" Click="SodaFlavorRadioButtonClick" Content="Cream Soda"/>
+            <RadioButton Name="OrangeSodaRadioButton" Click="SodaFlavorRadioButtonClick" Content="Orange Soda"/>
+            <RadioButton Name="RootBeerRadioButton" Click="SodaFlavorRadioButtonClick" Content="Root Beer"/>
+            <RadioButton Name="SarsparillaRadioButton" Click="SodaFlavorRadioButtonClick" Content="Sarsparilla"/>
         </StackPanel>
-        <CheckBox Grid.Row="1" Grid.Column="2" IsChecked="{Binding Path=Ice}" Content="Ice"/>
+        <!--User can select the size of the Jerked Soda by choosing one of the three radio buttons-->
+        <StackPanel Grid.Row="1" Grid.Column="2" HorizontalAlignment="Left">
+            <TextBlock Text="Size" FontSize="28"/>
+            <RadioButton Name="SmallRadioButton" Click="SizeRadioButtonClick" Content="Small"/>
+            <RadioButton Name="MediumRadioButton" Click="SizeRadioButtonClick" Content="Medium"/>
+            <RadioButton Name="LargeRadioButton" Click="SizeRadioButtonClick" Content="Large"/>
+        </StackPanel>
     </Grid>
 </UserControl>
