--- a/PointOfSale/CustomizeTrailBurger.xaml
+++ b/PointOfSale/CustomizeTrailBurger.xaml
@@ -6,23 +6,24 @@
              xmlns:local="clr-namespace:PointOfSale"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
+    <UserControl.Resources>
+        <Style TargetType="CheckBox">
+            <Setter Property="FontSize" Value="25"/>
+        </Style>
+    </UserControl.Resources>
     <Grid>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition/>
-            <ColumnDefinition/>
-            <ColumnDefinition/>
-            <ColumnDefinition/>
-            <ColumnDefinition/>
-        </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="50"/>
             <RowDefinition/>
         </Grid.RowDefinitions>
-        <TextBlock Grid.Row="0" Grid.ColumnSpan="5" FontSize="30"  Text="Trail Burger"/>
-        <CheckBox Grid.Row="1" Grid.Column="0" IsChecked="{Binding Path=Bun}" Content="Bun"/>
-        <CheckBox Grid.Row="1" Grid.Column="1" IsChecked="{Binding Path=Cheese}" Content="Cheese"/>
-        <CheckBox Grid.Row="1" Grid.Column="2" IsChecked="{Binding Path=Ketchup}" Content="Ketchup"/>
-        <CheckBox Grid.Row="1" Grid.Column="3" IsChecked="{Binding Path=Mustard}" Content="Mustard"/>
-        <CheckBox Grid.Row="1" Grid.Column="4" IsChecked="{Binding Path=Pickle}" Content="Pickle"/>
+        <TextBlock Grid.Row="0" FontSize="30"  Text="Trail Burger"/>
+        <StackPanel Grid.Row="1" HorizontalAlignment="Left">
+            <TextBlock Text="Ingredients" FontSize="28"/>
+            <CheckBox IsChecked="{Binding Path=Bun}" Content="Bun"/>
+        <CheckBox IsChecked="{Binding Path=Cheese}" Content="Cheese"/>
+        <CheckBox IsChecked="{Binding Path=Ketchup}" Content="Ketchup"/>
+        <CheckBox IsChecked="{Binding Path=Mustard}" Content="Mustard"/>
+        <CheckBox IsChecked="{Binding Path=Pickle}" Content="Pickle"/>
+        </StackPanel>
     </Grid>
 </UserControl>
