--- a/PointOfSale/CustomizeWater.xaml
+++ b/PointOfSale/CustomizeWater.xaml
@@ -6,24 +6,35 @@
              xmlns:local="clr-namespace:PointOfSale"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
+    <UserControl.Resources>
+        <Style TargetType="CheckBox">
+            <Setter Property="FontSize" Value="25"/>
+        </Style>
+        <Style TargetType="RadioButton">
+            <Setter Property="FontSize" Value="25"/>
+        </Style>
+    </UserControl.Resources>
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition/>
-            <ColumnDefinition/>
+            <ColumnDefinition Width="160"/>
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="50"/>
             <RowDefinition/>
         </Grid.RowDefinitions>
-        <TextBlock Grid.Row="0" Grid.ColumnSpan="3" FontSize="30" Text="Water"/>
-        <!--User can select the size of the Water by choosing one of the three radio buttons-->
+        <TextBlock Grid.Row="0" Grid.ColumnSpan="2" FontSize="30" Text="Water"/>
         <StackPanel Grid.Row="1" Grid.Column="0" HorizontalAlignment="Left">
-            <RadioButton Name="SmallRadioButton" Click="RadioButtonClick" Content="Small" Width="100"/>
-            <RadioButton Name="MediumRadioButton" Click="RadioButtonClick" Content="Medium" Width="100"/>
-            <RadioButton Name="LargeRadioButton" Click="RadioButtonClick" Content="Large" Width="100"/>
+            <TextBlock Text="Ingredients" FontSize="28"/>
+            <CheckBox IsChecked="{Binding Path=Ice}" Content="Ice"/>
+            <CheckBox IsChecked="{Binding Path=Lemon}" Content="Lemon"/>
         </StackPanel>
-        <CheckBox Grid.Row="1" Grid.Column="1" IsChecked="{Binding Path=Ice}" Content="Ice"/>
-        <CheckBox Grid.Row="1" Grid.Column="2" IsChecked="{Binding Path=Lemon}" Content="Lemon"/>
+        <!--User can select the size of the Water by choosing one of the three radio buttons-->
+        <StackPanel Grid.Row="1" Grid.Column="1" HorizontalAlignment="Left">
+            <TextBlock Text="Size" FontSize="28"/>
+            <RadioButton Name="SmallRadioButton" Click="RadioButtonClick" Content="Small"/>
+            <RadioButton Name="MediumRadioButton" Click="RadioButtonClick" Content="Medium"/>
+            <RadioButton Name="LargeRadioButton" Click="RadioButtonClick" Content="Large"/>
+        </StackPanel>
     </Grid>
 </UserControl>
