--- a/Website/Pages/Index.cshtml
+++ b/Website/Pages/Index.cshtml
@@ -15,171 +15,114 @@
     </p>
 </div>
 
-<div class="menu">
-    <! Organizes a list of entrees and displays the according price and calories/>
-    <div class="menu-entree">
-        <h2>Entrees</h2>
-
-        <ul>
-            @{
-                foreach (CowboyCafe.Data.IOrderItem item in Model.Menu)
-                {
-                    if (item is CowboyCafe.Data.Entree e)
-                    {
-                        <h3>@item.ToString()</h3>
-                        <li style="list-style-type: none;">
-                            <b>Price: </b> <i>@item.Price.ToString("c")</i><br />
-                            <b>Calories: </b> <i>@item.Calories</i><br />
-                        </li>
-                    }
-                }
-            }
-        </ul>
+<form class="menu-database">
+    <div class="search">
+        <input type="text" name="SearchTerms" value="@Model.SearchTerms"/>
+        <input type="submit" value="Search"/>
     </div>
 
-    <! Organizes a list of all sides in by displaying the according item and their size's calories and price/>
-    <div class="menu-side">
-        <h2>Sides</h2>
+    <div class="filters">
+        <h4>Types of Items</h4>
+        @foreach (String type in CowboyCafe.Data.Menu.TypesOfItem)
+        {
+            <label>
+                <input type="checkbox" name="TypesOfItems" value="@type" checked="@Model.TypesOfItems.Contains(type)" />
+                @type
+            </label>
+        }
 
-        <ul>
-            @{
-                int numSides = 0;
-                foreach (CowboyCafe.Data.IOrderItem item in Model.Menu)
-                {
-                    if (item is CowboyCafe.Data.Side s)
-                    {
-                        if (numSides % 3 == 0)
-                        {
-                            <h3>@item.ToString().Substring(5)</h3>
-                        }
-                        <li style="list-style-type: none;">
-                            @{
-                                if (numSides % 3 == 0)
-                                {
-                                    <h4>Small</h4>
-                                    <b>Price: </b> <i>@item.Price.ToString("c")</i><br />
-                                    <b>Calories: </b> <i>@item.Calories</i><br />
-                                }
+        <h4>Calories</h4>
+        <div>
+            Between
+            <input name="CaloriesMin" type="number" min="0" max="1000" step="10" placeholder="min" value="@Model.CaloriesMin"/>
+            and
+            <input name="CaloriesMax" type="number" min="0" max="1000" step="10" placeholder="max" value="@Model.CaloriesMax"/>
+        </div>
 
-                                else if (numSides % 3 == 1)
-                                {
-                                    <h4>Medium</h4>
-                                    <b>Price: </b> <i>@item.Price.ToString("c")</i><br />
-                                    <b>Calories: </b> <i>@item.Calories</i><br />
-                                }
-
-                                else
-                                {
-                                    <h4>Large</h4>
-                                    <b>Price: </b> <i>@item.Price.ToString("c")</i><br />
-                                    <b>Calories: </b> <i>@item.Calories</i><br />
-                                }
-                                numSides++;
-                            }
-                        </li>
-                    }
-                }
-            }
-        </ul>
+        <h4>Price</h4>
+        <div>
+            Between $
+            <input name="PriceMin" type="number" min="0" max="10" step="0.1" placeholder="min" value="@Model.PriceMin"/>
+            and $
+            <input name="PriceMax" type="number" min="0" max="10" step="0.1" placeholder="max" value="@Model.PriceMax"/>
+        </div>
     </div>
 
-    <! Organizes a list of drinks and displays the according sizes with their price and calories. The water has the same price and calories for
-       each size/>
-    <div class="menu-drink">
-        <h2>Drinks</h2>
+    <div class="menu">
+        <! Organizes a list of entrees and displays the according price and calories/>
+        <div class="menu-entree">
+            <h2>Entrees</h2>
 
-        <ul>
-            @{
-                numSides = 0;
-                foreach (CowboyCafe.Data.IOrderItem item in Model.Menu)
-                {
-                    if (item is CowboyCafe.Data.Drink d)
+            <ul>
+                @{
+                    foreach (CowboyCafe.Data.IOrderItem item in Model.Menu)
                     {
-                        if (!item.ToString().Contains("Water"))
+                        if (item is CowboyCafe.Data.Entree e)
                         {
-                            if (numSides % 3 == 0)
-                            {
-                                if (item.ToString().Contains("Jerked Soda"))
-                                {
-                                    <h3>Jerked Soda</h3>
-                                }
-                                else if (item.ToString().Contains("Texas"))
-                                {
-                                    <h3>Texas Tea</h3>
-                                }
-                                else
-                                {
-                                    <h3>Cowboy Coffee</h3>
-                                }
-                            }
+                            <h3>@item.ToString()</h3>
                             <li style="list-style-type: none;">
-                                @{
-                                    if (numSides % 3 == 0)
-                                    {
-                                        <h4>Small</h4>
-                                        <b>Price: </b> <i>@item.Price.ToString("c")</i><br />
-                                        if (item.ToString().Contains("Texas Sweet"))
-                                        {
-                                            CowboyCafe.Data.TexasTea tea = new CowboyCafe.Data.TexasTea();
-                                            tea.Sweet = false;
-                                            <b>(Sweet) Calories: </b> <i>@item.Calories</i><br />
-                                            <b>(Plain) Calories: </b> <i>@tea.Calories</i><br />
-                                        }
-                                        else
-                                        {
-                                            <b>Calories: </b> <i>@item.Calories</i><br />
-                                        }
-                                    }
-
-                                    else if (numSides % 3 == 1)
-                                    {
-                                        <h4>Medium</h4>
-                                        <b>Price: </b> <i>@item.Price.ToString("c")</i><br />
-                                        if (item.ToString().Contains("Texas"))
-                                        {
-                                            CowboyCafe.Data.TexasTea tea = new CowboyCafe.Data.TexasTea(CowboyCafe.Data.Size.Medium);
-                                            tea.Sweet = false;
-                                            <b>(Sweet) Calories: </b> <i>@item.Calories</i><br />
-                                            <b>(Plain) Calories: </b> <i>@tea.Calories</i><br />
-                                        }
-                                        else
-                                        {
-                                            <b>Calories: </b> <i>@item.Calories</i><br />
-                                        }
-                                    }
-
-                                    else
-                                    {
-                                        <h4>Large</h4>
-                                        <b>Price: </b> <i>@item.Price.ToString("c")</i><br />
-                                        if (item.ToString().Contains("Texas"))
-                                        {
-                                            CowboyCafe.Data.TexasTea tea = new CowboyCafe.Data.TexasTea(CowboyCafe.Data.Size.Large);
-                                            tea.Sweet = false;
-                                            <b>(Sweet) Calories: </b> <i>@item.Calories</i><br />
-                                            <b>(Plain) Calories: </b> <i>@tea.Calories</i><br />
-                                        }
-                                        else
-                                        {
-                                            <b>Calories: </b> <i>@item.Calories</i><br />
-                                        }
-                                    }
-                                    numSides++;
-                                }
-                            </li>
-                        }
-                        else
-                        {
-                            <h3>@item.ToString().Substring(5)</h3>
-                            <li style="list-style-type: none;">
-                                <h4>Small, Medium, & Large</h4>
                                 <b>Price: </b> <i>@item.Price.ToString("c")</i><br />
                                 <b>Calories: </b> <i>@item.Calories</i><br />
                             </li>
                         }
                     }
                 }
-            }
-        </ul>
+            </ul>
+        </div>
+
+        <! Organizes a list of all sides in by displaying the according item and their size's calories and price/>
+        <div class="menu-side">
+            <h2>Sides</h2>
+
+            <ul>
+                @{
+                    foreach (CowboyCafe.Data.IOrderItem item in Model.Menu)
+                    {
+                        if (item is CowboyCafe.Data.Side s)
+                        {
+                            <h3>@item.ToString()</h3>
+                            <li style="list-style-type: none;">
+                                <b>Price: </b> <i>@item.Price.ToString("c")</i><br />
+                                <b>Calories: </b> <i>@item.Calories</i><br />
+                            </li>
+                        }
+                    }
+                }
+            </ul>
+        </div>
+
+        <! Organizes a list of drinks and displays the according sizes with their price and calories. The water has the same price and calories for
+           each size/>
+        <div class="menu-drink">
+            <h2>Drinks</h2>
+
+            <ul>
+                @{
+                    foreach (CowboyCafe.Data.IOrderItem item in Model.Menu)
+                    {
+                        if (item is CowboyCafe.Data.Drink d)
+                        {
+                            if (item.ToString().Contains("Water"))
+                            {
+                                <h3>@item.ToString().Substring(5)</h3>
+                                <li style="list-style-type: none;">
+                                    <b>Small, Medium, and Large</b><br />
+                                    <b>Price: </b> <i>@item.Price.ToString("c")</i><br />
+                                    <b>Calories: </b> <i>@item.Calories</i><br />
+                                </li>
+                            }
+                            else
+                            {
+                                <h3>@item.ToString()</h3>
+                                <li style="list-style-type: none;">
+                                    <b>Price: </b> <i>@item.Price.ToString("c")</i><br />
+                                    <b>Calories: </b> <i>@item.Calories</i><br />
+                                </li>
+                            }
+                        }
+                    }
+                }
+            </ul>
+        </div>
     </div>
-</div>
+</form>
